--- a/spotilights/package.json
+++ b/spotilights/package.json
@@ -12,10 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "formidable": "^3.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
+    "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
